--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,4 +1,4 @@
-$navbar-height: 52px;
+$navbar-height: 60px;
 
 $color-primary: #990000;
 $color-primary-dark: #7a0000;
